<resources>
    <string name="app_name">DiseñoLogin</string>

    <string name="editTextEmail">Email</string>
    <string name="editTextPassword">Password</string>
    <string name="textButton">Sign In</string>
    <string name="textButtonSignUp">Sign Up</string>
    <string name="textPrivacy">Privacy Policy</string>
    <string name="textVerifyPassword">Verify Password</string>
    <string name="textForgotPassword">Forgot Password?</string>


    <string name="textviewSignIn">Sign In</string>
    <string name="textviewSignUp">Sign Up</string>


</resources>