<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textviewSignIn"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/textViewSingIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textviewSignUp"
        android:textSize="50sp"
        android:textColor="@color/textViewSingUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignIn" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/esquina_redondeada_edit_text_login"
        android:inputType="textEmailAddress"
        android:hint="@string/editTextEmail"
        android:padding="10dp"
        android:textColorHint="@color/textViewSingUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/esquina_redondeada_edit_text_login"
        android:hint="@string/editTextPassword"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textColorHint="@color/textViewSingUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textForgotPassword"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        android:textColor="@color/textViewSingIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/textButton"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/textPrivacy"
        android:textColor="@color/textViewSingIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:foreground="?selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />


</androidx.constraintlayout.widget.ConstraintLayout>