<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvvm_sign_up.view.SignUpActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".mvvm_sign_up.view.SignUpActivity">


    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textviewSignIn"
        android:textSize="50sp"
        android:textColor="@color/textViewSingUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textviewSignUp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/textViewSingIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignIn" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/esquina_redondeada_edit_text_login"
        android:inputType="textEmailAddress"
        android:hint="@string/editTextEmail"
        android:padding="10dp"
        android:textColorHint="@color/textViewSingUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/esquina_redondeada_edit_text_login"
        android:hint="@string/editTextPassword"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textColorHint="@color/textViewSingUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextVerifyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/esquina_redondeada_edit_text_login"
        android:hint="@string/textVerifyPassword"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textColorHint="@color/textViewSingUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/textButtonSignUp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVerifyPassword" />

    <Button
        android:id="@+id/btnPrivacyPoliticSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:clickable="true"
        android:focusable="true"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/textPrivacy"
        android:textAllCaps="false"
        android:textColor="@color/textViewSingIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

     </androidx.constraintlayout.widget.ConstraintLayout >
    </ScrollView>